--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <script src="rockpaperscissor.js"></script>
 </head>
 <body>
+
+    <button>Rock</button>
+    <button>Paper</button>
+    <button>Scissors</button>
     
 </body>
 </html>
